--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
           animation: gradient 5s ease infinite;
   padding: 7.5rem 0;
 }
-@media (min-width: 381px) and (max-width: 1024px) {
+@media (min-width: 321px) and (max-width: 1024px) {
   .cs-container {
     padding-right: 3rem;
     padding-left: 3rem;
@@ -158,14 +158,13 @@ body {
 .cs-heading {
   font-family: var(--font-heading);
   font-weight: 900;
-  font-size: 6.4rem;
+  font-size: 3.8rem;
   text-transform: capitalize;
   color: var(--color-primary);
-  margin-bottom: 2rem;
 }
-@media (min-width: 381px) and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .cs-heading {
-    font-size: 4.8rem;
+    font-size: 2.6rem;
   }
 }
 .cs-text {
@@ -174,7 +173,7 @@ body {
   text-align: center;
   margin: 3rem 0;
 }
-@media (min-width: 381px) and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .cs-text {
     font-size: 1.4rem;
   }
@@ -307,25 +306,4 @@ body {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
-}
-#countdown-timer {
-  /* display: flex; */
-  text-align: center;
-  font-size: 40px !important;
-  text-transform: uppercase;
-}
-
-.timer {
-  margin-right: 10px;
-}
-
-#countdown-timer {
-  text-align: center;
-  font-size: 18px !important;
-  text-transform: uppercase;
-  font-weight: bolder;
-  color: #0b9adc;
-  -webkit-transform: translateY(-10px);
-      -ms-transform: translateY(-10px);
-          transform: translateY(-10px);
 }
